fix : footer overflow

--- a/css/geral/body.css
+++ b/css/geral/body.css
@@ -2,6 +2,7 @@
  html {
     height: 100%;
     min-height: 100%;
+    overflow-x: hidden;
 }
 
 body {
